backport rules/fixes wip